deploy.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-test-1
  labels:
    app : my-test-1
spec:
  replicas: 2
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name : my-test-1
          image: ylais4/test-app-1:v0.2
          ports:
            - containerPort: 80   
---

apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-test-2
  labels:
    app : my-test-2
spec:
  replicas: 2
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name : my-test-2
          image: ylais4/test-app-1:v0.2
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-test-1
  labels:
     env  : prod
     owner: Yuriy
spec:
  type: LoadBalancer
  selector:
    project: test
  ports:
    - name      : my-test-1
      protocol  : TCP
      port      : 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-test-2
  labels:
     env  : prod
     owner: Yuriy
spec:
  type: LoadBalancer
  selector:
    project: test
  ports:
    - name      : my-test-2
      protocol  : TCP
      port      : 80
      targetPort: 80
